<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativePrint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.MainActivity">

    <RelativeLayout
        android:id="@+id/menu_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="4dp"
        android:paddingVertical="4dp">

        <ImageView
            android:id="@+id/seta"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/menu_de_op_es"
            android:src="@drawable/round_trending_down_24"
            app:tint="@color/accent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="8dp"
            android:layout_toStartOf="@+id/btn_settings"
            android:layout_toEndOf="@+id/seta"
            android:fontFamily="sans-serif-medium"
            android:visibility="gone"
            android:text="@string/app_name"
            android:textColor="@color/textLight"
            android:textSize="32sp" />

        <ImageView
            android:id="@+id/btn_settings"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/rounded_r16"
            android:backgroundTint="@color/backgroundLight"
            android:contentDescription="@string/a_o_de_abrir_configura_es"
            android:padding="12dp"
            android:src="@drawable/round_more_vert_24"
            app:tint="@color/accent" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_share"
        android:layout_below="@+id/menu_holder"
        android:background="@color/background"
        android:padding="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/linear_recorde"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/estou_a"
                android:textColor="@color/textLight"
                android:textSize="64sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/_0_dias"
                android:textColor="@color/accent"
                android:textSize="64sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/mensagem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-12dp"
                android:background="@null"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/sem"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="text|textMultiLine"
                android:textColor="@color/textLight"
                android:textColorHint="@color/textLight"
                android:textSize="64sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:text="@string/clique_longo_para_editar"
                android:textColor="@color/textLight"
                android:textSize="12sp"
                app:drawableStartCompat="@drawable/outline_info_24"
                app:drawableTint="@color/textLight" />
        </LinearLayout>

        <nl.dionsegijn.konfetti.xml.KonfettiView
            android:id="@+id/konfettiView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/linear_recorde"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/meu_recorde_de"
                android:textColor="@color/textLight"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/recorde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/_0_dias"
                android:textColor="@color/accent"
                android:textSize="44sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btn_share"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_r24"
        android:backgroundTint="@color/accent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="2dp"
            android:contentDescription="@string/a_o_de_compartilhar"
            android:src="@drawable/round_share_24"
            app:tint="@color/textDark" />
    </RelativeLayout>
</RelativeLayout>