<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="288dp"
    android:layout_height="358dp"
    android:layout_marginStart="24dp"
    android:minHeight="358dp">

    <View
        android:id="@+id/view_background_mask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/surface"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/relative_background_accent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?colorAccent">

        <RelativeLayout
            android:id="@+id/relative_background"
            android:layout_width="280dp"
            android:layout_height="350dp"
            android:layout_centerInParent="true"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_r24"
            android:padding="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/linear_recorde"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvEstou"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@+id/seta"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/estou_a"
                        android:textSize="32sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/seta"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/menu_de_op_es"
                        android:src="@drawable/round_trending_down_24"
                        app:tint="?colorAccent" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tvNumDias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/_0_dias"
                    android:textColor="?colorAccent"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvFrase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/sem"
                    android:textSize="32sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/linear_recorde"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_frase_recorde"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/meu_recorde_de"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_recorde"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/_0_dias"
                    android:textColor="?colorAccent"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>